Content API implemented for home & search page

--- a/src/components/BookDetail.scss
+++ b/src/components/BookDetail.scss
@@ -1,4 +1,14 @@
 @use "../styles/index" as *;
+
+@keyframes shimmer {
+  0% {
+    background-position: -200px 0;
+  }
+  100% {
+    background-position: 200px 0;
+  }
+}
+
 .book-wrapper {
   padding: rem(70px) 0;
   .main-wrapper {
@@ -7,9 +17,14 @@
     .img-wrapper {
       width: 30%;
       flex: 0 0 30%;
+      background: linear-gradient(90deg, #e0e0e0 25%, #f5f5f5 50%, #e0e0e0 75%);
+      background-size: 200% 100%;
+      animation: shimmer 1.5s infinite linear;
+      border-radius: 4px;
       img {
         width: 100%;
         height: auto;
+        aspect-ratio: 575/889;
       }
     }
     .content-wrapper {
@@ -93,10 +108,8 @@
       }
       .img-wrapper {
         max-height: mrem(550px);
-        img {
-          width: 60%;
-          margin: 0 auto;
-        }
+        width: 60%;
+        margin: 0 auto;
       }
       .content-wrapper {
         .cta-wrapper {
